--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nium Portfolio</title>
+    <title>Portfolio</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nium-portfolio.vercel.app/">
-    <meta property="og:title" content="Nium Portfolio - Anh Tran">
+    <meta property="og:title" content="Nium Portfolio">
     <meta property="og:description"
         content="Competitive Programmer | Informatics Specialist | Student at Gia Dinh High School">
     <meta property="og:image" content="redgirl.jpg">
@@ -1285,6 +1285,33 @@
             box-shadow: 0 0 10px rgba(0, 153, 204, 0.4);
         }
 
+        /* Portfolio Logo */
+        .portfolio-logo {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 102;
+            cursor: pointer;
+            transition: transform 0.3s ease, opacity 0.3s ease;
+            opacity: 0.95;
+        }
+
+        .portfolio-logo img {
+            height: 40px;
+            width: auto;
+            filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.3));
+            transition: filter 0.3s ease;
+        }
+
+        .portfolio-logo:hover {
+            transform: scale(1.05);
+            opacity: 1;
+        }
+
+        .portfolio-logo:hover img {
+            filter: drop-shadow(0 4px 12px rgba(66, 133, 244, 0.4));
+        }
+
         /* Progress Bar */
         .progress-bar {
             position: fixed;
@@ -1299,6 +1326,10 @@
 
         /* Responsive Design - Extra Large Screens (1440px+) */
         @media (min-width: 1440px) {
+            .portfolio-logo img {
+                height: 50px;
+            }
+
             .slide-hero h1 {
                 font-size: 5rem;
             }
@@ -1559,6 +1590,15 @@
 
         /* Responsive Design - Small Tablets & Large Mobile (481px - 768px) */
         @media (max-width: 768px) and (min-width: 481px) {
+            .portfolio-logo {
+                top: 15px;
+                left: 15px;
+            }
+
+            .portfolio-logo img {
+                height: 32px;
+            }
+
             .slide-hero h1 {
                 font-size: 2.5rem;
                 margin-bottom: 12px;
@@ -1713,6 +1753,15 @@
 
         /* Responsive Design - Mobile (320px - 480px) */
         @media (max-width: 480px) {
+            .portfolio-logo {
+                top: 12px;
+                left: 12px;
+            }
+
+            .portfolio-logo img {
+                height: 26px;
+            }
+
             .slide {
                 padding: 20px;
             }
@@ -1955,6 +2004,11 @@
 </head>
 
 <body>
+    <!-- Portfolio Logo -->
+    <div class="portfolio-logo" onclick="goToSlide(0)">
+        <img src="nium-logo.png" alt="Nium Portfolio">
+    </div>
+
     <div id="stars-container"></div>
     <div id="particles-js"></div>
 
